--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,8 @@
 
         <div ui-view=""></div>
 
+        <footer></footer>
+
         <!-- build:js(src) scripts/vendor.js -->
         <!-- bower:js -->
         <!-- Bower dependencies scripts will go here after Gulp `inject` task. -->
