--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,14 @@
     <head>
         <base href="/">
         <meta charset="utf-8">
-        <title>Angular Gulp Boilerplate</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
+        <title>VizuAlert</title>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
             integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
             integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	    <link rel="icon" type="image/png" sizes="16x16" href="/app/assets/images/logo.png">
 
         <!-- build:css(src) styles/vendor.css -->
         <!-- bower:css -->
@@ -25,7 +28,7 @@
     </head>
 
     <body>
-
+        <!-- <header></header> -->
         <div ui-view=""></div>
 
         <footer></footer>
