--- a/src/index.html
+++ b/src/index.html
@@ -50,8 +50,12 @@
         <!-- endinject -->
 
         <!-- endbuild -->
+        <script src="../bower_components/moment/moment.js"></script>
+        <script src="../bower_components/angular-moment/angular-moment.js"></script>
+
         <script src="https://d3js.org/d3.v5.min.js"></script>
         <script src="//d3js.org/topojson.v1.min.js"></script>
+        
 
     </body>
 
