--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,7 @@
 
     <body>
         <!-- <header></header> -->
+          <login></login>
         <div ui-view=""></div>
 
         <footer></footer>
@@ -52,7 +53,8 @@
         <!-- endbuild -->
         <script src="../bower_components/moment/moment.js"></script>
         <script src="../bower_components/angular-moment/angular-moment.js"></script>
-
+        <script src="../bower_components/angular-md5/angular-md5.js"></script>
+        <script src="../bower_components/angular-ui-router/release/stateEvents.min.js"></script>
         <script src="https://d3js.org/d3.v5.min.js"></script>
         <script src="//d3js.org/topojson.v1.min.js"></script>
         
